<resources>
    <string name="app_name">StoryApp</string>
    <string name="detail_stories">Story Detail</string>
    <string name="data_stories">Add Stories</string>
    <string name="name">Name</string>
    <string name="btn_camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="created_at">Created at</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="invalid_email">Invalid Email Format!</string>
    <string name="invalid_password">Use at least %1$d characters!</string>
    <string name="name_hint">Input Your Name</string>
    <string name="email_hint">Input Your Email</string>
    <string name="desc_hint">Input Your Description</string>
    <string name="password_hint">Input Your Password</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="txt_reg">Don\'t Have Account?</string>
    <string name="txt_login">Already Have Account?</string>
    <string name="register">REGISTER</string>
    <string name="preview_imgDesc">Preview Image</string>
    <string name="detail_imgDesc">Detail Story Image</string>
    <string name="input_message">Input Your %1$s</string>
    <string name="dataStories_error">ERROR: Add Stories Data Error, Please Try Again!</string>
    <string name="login_error">Login Error, Please Try Again!</string>
    <string name="register_error">Register Error, Please Try Again!</string>
    <string name="no_permission">Can\'t Get Permission</string>
    <string name="reg_title">Congratulations!</string>
    <string name="reg_message">Your Account Successfully Created</string>
    <string name="reg_action">Next</string>
    <string name="log_title">Congratulations!</string>
    <string name="log_message">Successfully Login</string>
    <string name="store_message">Successfully Upload</string>
    <string name="log_action">Next</string>
    <string name="no_image">Please Input Your Image First!</string>
    <string name="choose_image">Choose a Picture</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="copyright">Copyright@2023 Woro Raytnonning</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Woro Raytnonning</string>
    <string name="profile_email">wororaf@gmail.com</string>
    <string name="backcamera">isBackCamera</string>
    <string name="fail_take_picture">Fail to take picture</string>
    <string name="search_hint">Input the name that you want to search</string>
    <string name="Cari">Input the name that you want to search</string>
    <string name="content_text">Hello… Welcome to Story App</string>
    <string name="retry">retry</string>
    <string name="set_themes">Mode</string>
    <string name="home">Home</string>
    <string name="map">MAP</string>
    <string name="no_location">No Location</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="location">Find Location</string>
    <string name="setting_map">Setting Map</string>
</resources>