<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_more_smoke"
    tools:context=".interfaces.login.LoginActivity">

    <TextView
        android:id="@+id/tv_regPage"
        style="@style/tvTitle"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="@+id/img_register"
        app:layout_constraintStart_toStartOf="@+id/img_register"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_register"

        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="32dp"
        android:contentDescription="@string/welcome_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_regPage"
        app:srcCompat="@drawable/image" />


    <TextView
        android:id="@+id/tv_nameReg"
        style="@style/tvET"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/img_register"
        app:layout_constraintStart_toStartOf="@+id/img_register"
        app:layout_constraintTop_toBottomOf="@+id/img_register" />

    <com.wororn.storyapp.customeditor.NameEditText
        android:id="@+id/ce_nameReg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:drawableStart="@drawable/ic_baseline_person_24dp"
        android:hint="@string/name_hint"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/img_register"
        app:layout_constraintStart_toStartOf="@+id/img_register"
        app:layout_constraintTop_toBottomOf="@+id/tv_nameReg"
        tools:ignore="MissingClass,NotSibling"/>

    <TextView
        android:id="@+id/tv_emailReg"
        style="@style/tvET"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/ce_nameReg"
        app:layout_constraintStart_toStartOf="@+id/ce_nameReg"
        app:layout_constraintTop_toBottomOf="@+id/ce_nameReg" />

    <com.wororn.storyapp.customeditor.EmailEditText
        android:id="@+id/ce_emailReg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:drawableStart="@drawable/ic_baseline_email_24dp"
        android:hint="@string/email_hint"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/img_register"
        app:layout_constraintStart_toStartOf="@+id/img_register"
        app:layout_constraintTop_toBottomOf="@+id/tv_emailReg"
        tools:ignore="MissingClass"/>

    <TextView
        android:id="@+id/tv_passwordReg"
        style="@style/tvET"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/ce_emailReg"
        app:layout_constraintStart_toStartOf="@+id/ce_emailReg"
        app:layout_constraintTop_toBottomOf="@+id/ce_emailReg" />

    <com.wororn.storyapp.customeditor.PasswordEditText
        android:id="@+id/ce_passwordReg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:drawableStart="@drawable/ic_baseline_lock_24dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/ce_emailReg"
        app:layout_constraintStart_toStartOf="@+id/ce_emailReg"
        app:layout_constraintTop_toBottomOf="@+id/tv_passwordReg"
        tools:ignore="MissingClass" />

    <com.wororn.storyapp.customeditor.WoroButton
        android:id="@+id/btn_register"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="0"
        android:text="@string/register"
        android:textColor="#0B102C"
        android:background="@drawable/bg_button"
        app:layout_constraintEnd_toEndOf="@+id/ce_passwordReg"
        app:layout_constraintStart_toStartOf="@+id/ce_passwordReg"
        app:layout_constraintTop_toBottomOf="@+id/ce_passwordReg"
        tools:ignore="DuplicateSpeakableTextCheck,MissingClass" />

    <TextView
        android:id="@+id/tv_txtLogin"
        style="@style/tvAcc.black"
        android:layout_marginTop="10dp"
        android:text="@string/txt_login"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <TextView
        android:id="@+id/tv_loginReg"
        style="@style/tvAcc.blue"
        android:layout_marginStart="8dp"
        android:text="@string/login"
        app:layout_constraintStart_toEndOf="@+id/tv_txtLogin"
        app:layout_constraintTop_toTopOf="@+id/tv_txtLogin" />

    <TextView
        android:id="@+id/tv_copyright"
        style="@style/tvAcc.blue"
        android:layout_width="300dp"
        android:layout_height="19dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        android:text="@string/copyright"
        app:layout_constraintEnd_toEndOf="@+id/tv_loginReg"
        app:layout_constraintStart_toStartOf="@+id/tv_txtLogin"
        app:layout_constraintTop_toBottomOf="@+id/tv_loginReg" />

    <RelativeLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@color/loading_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>