<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center_vertical"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:orientation="vertical"
    card:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/roundedshape"
        android:padding="5dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_story"
            android:layout_width="123dp"
            android:layout_height="90dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/name"

            android:scaleType="centerCrop"
            card:layout_constraintEnd_toStartOf="@+id/tv_Desc"
            card:layout_constraintHorizontal_bias="1.0"

            card:layout_constraintStart_toStartOf="parent"
            card:layout_constraintTop_toBottomOf="@+id/tv_Create"
            card:shapeAppearanceOverlay="@style/roundedrectangle"

            card:strokeWidth="3dp"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/tvDesc.head"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            card:layout_constraintEnd_toEndOf="parent"
            card:layout_constraintHorizontal_bias="0.555"
            card:layout_constraintStart_toStartOf="parent"
            card:layout_constraintTop_toTopOf="parent"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/tv_Create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textSize="11sp"
            card:layout_constraintBottom_toTopOf="@+id/img_story"
            card:layout_constraintEnd_toEndOf="@+id/tv_name"
            card:layout_constraintHorizontal_bias="1.0"
            card:layout_constraintStart_toStartOf="@+id/tv_name"
            card:layout_constraintTop_toBottomOf="@+id/tv_name"
            card:layout_constraintVertical_bias="0.088"
            tools:text="@string/created_at" />

        <TextView
            android:id="@+id/tv_Desc"
            android:layout_width="250dp"
            android:layout_height="89dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/squareshape"
            android:maxLines="3"

            card:layout_constraintEnd_toEndOf="parent"
            card:layout_constraintStart_toEndOf="@+id/img_story"
            card:layout_constraintTop_toBottomOf="@+id/tv_Create"
            tools:text="@string/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>